--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <form>
           <div class="mb-3">
            
-            <img src="Assets/Image/MyPortfolioPhoto.jpg" class="float-right" alt="my profile" />
+            <img src="./Assets/Image/MyPortfolioPhoto.jpg" alt="my profile" />
           </div>
          
         </form>
