--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         <!-- <h2 id="imgtext">Shweta</h2> -->
       </article>
       <article class="LakeForestheader">
-        <h1><i>Hawai</i><h1>
+        <h1><i>Hawai!</i><h1>
         </article>
         
       <aside class="Irvinepara">
@@ -85,7 +85,7 @@
         <img src="Assets/Image/IMG_8109.jpg" alt="">
       </article>
       <article class="Newyorkheader">
-        <h1><i>Niagra falls excites me!</i>
+        <h1><i>Niagara falls excites me!</i>
           <h1>
           </article>
     </section>
