--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
       </aside>
 
       <article class="LakeForest">
-        <img style="position:relative" src="Assets/Image/IMG_7670.jpg" alt="">
+        <img style="position:relative" src="./Assets/Image/IMG_7670.JPG" alt="">
         <!-- <h2 id="imgtext">Shweta</h2> -->
       </article>
       <article class="LakeForestheader">
@@ -70,19 +70,19 @@
      
 
       <article class="Irvine">
-        <img src="Assets/Image/IMG_2590.jpg" alt="">
+        <img src="./Assets/Image/IMG_2590.JPG" alt="">
       </article>
       <article class="Irvineheader">
         <h1><i>My love for sports car!</i>
           <h1>
       </article>
       <aside class="Newyorkpara">
-        <p>Actually, The Falls are a sensational Natural Wonder. Positively spectacular. And, there are so many ways to enjoy them, including just wandering up and down the walkways. It's a modern engineering wonder that the water is
+        <p>Actually, The Niagara Falls are a sensational natural wonder, positively spectacular. And, there are so many ways to enjoy them, including just wandering up and down the walkways. It's a modern engineering wonder that the water is
          "held back" (or you wouldn't be able to see anything for the mist), which also miminizes erosion.</p>
        
       </aside>
       <article class="Newyork">
-        <img src="Assets/Image/IMG_8109.jpg" alt="">
+        <img src="./Assets/Image/IMG_8109.JPG" alt="">
       </article>
       <article class="Newyorkheader">
         <h1><i>Niagara falls excites me!</i>
