--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     </section>
     <section class="Hawai">
       <aside class="LakeForestpara">
-        <p>In 2016 I visited Hawaii. The Hawaiian Islands are beautiful, heavenly, peaceful islands that have one of the world’s most active volcanoes and the earth’s tallest sea mountain ideal for a Hawaii vacation. The islands are
+        <p>I visited Hawaii in 2016. The Hawaiian Islands are beautiful, heavenly, peaceful islands that have one of the world’s most active volcanoes and the earth’s tallest sea mountain ideal for a Hawaii vacation. The islands are
         the youngest geological formations in the world and also the youngest state of the United States. Hawaii is the birthplace of surfing, hula dancing and the Hawaiian Regional Cuisine which is a fusion of Hawaii’s ethnic flavours and international gastronomy. The state is made up of a chain of six islands that all have their
         own unique personality and different attractions to discover on a Hawaii vacation.</p>
          
@@ -54,7 +54,7 @@
 
       <article class="LakeForest">
         <img style="position:relative" src="./Assets/Image/IMG_7670.JPG" alt="">
-        <!-- <h2 id="imgtext">Shweta</h2> -->
+        
       </article>
       <article class="LakeForestheader">
         <h1><i>Hawai!</i><h1>
