project tab added

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent" style="display:inline-block">
         <h1 id="myname"><i>Shweta</i></h1>
+        
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 float-right" style="margin-left:30%;">
           <li class="nav-item">
             <a id="navbarlink" class="nav-link active" id="float-right" aria-current="page" href="index.html">About</a>
@@ -76,6 +77,13 @@
     &copy; 2021 Shweta Sharma.
     </p>
   </footer>
+
+  <script>
+  document.getElementById('myname').classList.add('changenamecolor')
+
+  // document.getElementById('myname').className = 'changenamecolor'
+
+  </script>
   
   
 </body>
