--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a id="navbarlink" class="nav-link active" aria-current="page" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <a id="navbarlink" class="nav-link active" aria-current="page" href="https://ohskie3.github.io/Project-1/">project</a>
+          </li>
         </ul>
         
       </div>
