--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             <a id="navbarlink" class="nav-link active" aria-current="page" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a id="navbarlink" class="nav-link active" aria-current="page" href="https://ohskie3.github.io/Project-1/">project</a>
+            <a id="navbarlink" class="nav-link active" aria-current="page" href="https://ohskie3.github.io/Project-1/">project-1</a>
+          </li>
+          <li class="nav-item">
+            <a id="navbarlink" class="nav-link active" aria-current="page"
+              href="https://limitless-fortress-65893.herokuapp.com//">project-2</a>
           </li>
         </ul>
         
